# out-loud

./: .oxfmtrc.json  .oxlintrc.json  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  electron-builder.json  eslint.config.js  knip.config.js  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/rulesets/: README.md  release-tags.json
.github/workflows/: ci.yml  deploy-web.yml  pages.yml  release-tauri.yml  release.yml
chrome-extension/: sidepanel.html
docs/: README.md
docs/app/: architecture.md  reader.md
electron/: main.js  main.js.map  main.ts  preload.cjs  preload.js  preload.js.map  preload.ts  reader-recents.js  reader-recents.js.map  reader-recents.ts  store.js  store.js.map  store.ts  telemetry-config.js  telemetry-config.js.map  telemetry-config.ts  telemetry.js  telemetry.js.map  telemetry.ts  tts-worker.js  tts-worker.js.map  tts-worker.ts  update-check.js  update-check.js.map  update-check.ts  word-extractor.d.ts
electron-ui/: package-lock.json  package.json
electron-ui/src/: App.tsx  constants.ts  electron.d.ts
electron-ui/src/components/: AboutDialog.tsx  PlaybackControls.tsx  RecentsSidebar.tsx  TextInput.tsx  UpdateBanner.tsx
electron-ui/src/hooks/: useAudioPlayer.ts  useLibrary.ts  useSettings.ts  useUpdateCheck.ts
electron-ui/src/lib/: analytics.ts
electron-ui/src/reader/: segment.ts
scripts/: notarize-release.mjs  release.mjs
site/: manifest.json
tauri/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  uno-preset-a11y.ts  uno-preset-rtl.ts  uno.config.ts  uno.theme.ts  vite.config.ts
tauri/scripts/: codesign-app.mjs  make-dmg.mjs  stage-resources.mjs
tauri/src/: App.vue  constants.ts  env.d.ts  main.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/engine/: Cargo.toml
tauri/src-tauri/engine/examples/: gen.rs  serve.rs
tauri/src-tauri/engine/src/: audio.rs  infer.rs  lib.rs  office.rs  phonemize.rs  server.rs  text.rs  tokenize.rs  voices.rs
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: engine_host.rs  lib.rs  main.rs  prefs.rs  recents.rs  tray.rs  update.rs
web/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/e2e/: cold-load.spec.ts
web/public/: coi-serviceworker.js  site.webmanifest
web/src/: App.web.vue  env.d.ts  i18n-web.ts  i18n.ts  ipc.ts  main.ts  protocol.ts  shims-tauri.d.ts  tts-client.ts  tts.worker.ts
(+43 files in other folders)
