[package]
name = "out-loud"
version = "2.0.0"
description = "Free, open-source, 100% offline AI text-to-speech desktop app powered by Kokoro-82M."
authors = ["Light Cloud"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "out_loud_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "http2", "charset"] }
tokio = { version = "1", features = ["time", "rt", "rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
# Native in-process TTS engine (replaces the Node sidecar).
out-loud-engine = { path = "engine" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
